Update application name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>My Vite App</title>
+    <title>Controle de Projetos - Alpha_v_001</title>
   </head>
   <body>
     <div id="root"></div>
